  side on I/O AT hardware when available. Disabled by default,
  to be enabled with the dmaengine module parameter.

Other improvements from previous release:
* Merge status and return codes into a single type and add many new
  values for more descriptive error codes.
* Fix completion of medium message send in case of a very short last
  fragment.
* Fix support for very large messages, up-to 4GB-1 (32bits length).
* Fix reporting of connection errors to the application.
* Fix management of queued requests in case of resource shortage.
* Fix a possible wrongly-early completion of large send in case of
  duplicate notify message being receive.
* Rework and uniformize the management of attached interfaces through
  the module parameter and sysfs file.
* Cleanup the build system.
* Many minor fixes, tiny optimizations, and documentation improvements
  all over the place.

Caveats:
* Queueing of requests in case of resource shortage is not perfect yet,
  some requests may not be processed in order.
* No dynamic peer discovery, omx_init_peers should be invoked manually
  to setup a static peer table.
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 0.4.0 (February 29th 2008, svn r1408)
=============================================
The PVFS2 release.

Major enhancements:
* Add thread-safety support, to be enabled with --enable-threads.

Other improvements from previous release:
* Add omx_wakeup(), omx_ibuffered() and mx_decompose_endpoint_addr2()
  functions.
* Add support for many info keys in omx_get_info()
* Fix and improve retransmission and reconnection.
* Fix support for mixed 32/64bits systems.
* Fix some race conditions when sleeping in the driver.
* Minor fixes in the MXoE wire and API compatibility.
* Many minor fixes, tiny optimizations, and documentation improvements
  all over the place.

Open-MX 0.3.0 (February 1st 2008, svn r1234)
============================================