@@ -1,9 +1,3 @@
-* release 0.4.90 with ioat disable for now to get bug fix and new ABI out
-  without fixing everything else
-
-* corruption?
-  + corruption in mx_msg_loop in the last frame of the first block whne multiple instanes in parallel
-
 * fix/improve ioat support
   + sleep a bit before polling on synchronous copies
     - add an empirical ioat speed, tested at startup, tuned at runtime, configurable with a module param
@@ -103,7 +97,7 @@
   + prefetch non-temporal from the event ring ro prevent cache line bounces?
   + or write event with non-temporal? hard in the kernel
 
-* group similar fields in structure for cache effects
+* group similar fields in structure for cache effects, cache-align some fields?
 
 * free request (and buffers) on close
   + preallocated pool with free list
@@ -112,7 +106,7 @@
     omx_pingpong: /home/bgoglin/open-mx/build-x86_64/../src/libopen-mx/omx_large.c:96: 
     omx__endpoint_large_region_free: Assertion `array[index].region.use_count == 0' failed.
 
-* drop our region window offset ? (when wire compat will work for large)
+* drop our region window offset ?
   + pull are aligned on the reader's pages because it's the slower side on native MX
     - we don't really care about alignment in open-mx, pages are pinned first, adding 2 pages to a skb isn't very expensive
     - we will still follow the remote side requirements when pulling from MX
@@ -124,14 +118,13 @@
 
 * --enable-32b/64b
 
-* get info irq affinity
-
 * wire compat
   + what's in src_generation ? unset/unchecked in OMX
-  + no rdmawin_seqnum set/checked
-  + lib ack contents
+  + fix lib ack contents?
 * wire-compat at runtime?
   + once reply-per-block is useless thanks to more blocks in parallel
+  + what about user-space stuff such as immediate notify ack?
+    - export flags in the driver abi to change user-space behavior?
 
 * optimize mediums
   + 2 pages if not mx wire compat
